clean up prof code